@@ -1,20 +1,24 @@
 package co.com.pragma.r2dbc.service;
 
 import co.com.pragma.model.technology.models.CapacityWithTechnologies;
+import co.com.pragma.model.technology.models.Technology;
 import co.com.pragma.model.technology.spi.ITechnologyCapacityPersistencePort;
 import co.com.pragma.r2dbc.entities.TechnologyCapacityEntity;
+import co.com.pragma.r2dbc.mapper.ITechnologyMapper;
 import co.com.pragma.r2dbc.repository.ITechnologyCapacityRepository;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TechnologyCapacityPersistenceAdapter implements ITechnologyCapacityPersistencePort {
 
     private final ITechnologyCapacityRepository technologyCapacityRepository;
+    private final ITechnologyMapper technologyMapper;
 
-    public TechnologyCapacityPersistenceAdapter(ITechnologyCapacityRepository technologyCapacityRepository) {
+    public TechnologyCapacityPersistenceAdapter(ITechnologyCapacityRepository technologyCapacityRepository, ITechnologyMapper technologyMapper) {
         this.technologyCapacityRepository = technologyCapacityRepository;
+        this.technologyMapper = technologyMapper;
     }
 
 
@@ -23,8 +27,13 @@ public class TechnologyCapacityPersistenceAdapter implements ITechnologyCapacity
         List<TechnologyCapacityEntity> entities = capacityWithTechnologies.getTechnologiesIds()
                 .stream()
                 .map(technologyId -> new TechnologyCapacityEntity(technologyId, capacityWithTechnologies.getCapacityId()))
-                .collect(Collectors.toList());
+                .toList();
 
         return technologyCapacityRepository.saveAll(entities).then();
+    }
+
+    @Override
+    public Flux<Technology> findTechnologiesByCapacity(Long capacityId) {
+        return technologyCapacityRepository.findByCapacityId(capacityId).map(technologyMapper::toModel);
     }
 }
